--- a/DynamicForm/DynamicForm.csproj
+++ b/DynamicForm/DynamicForm.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>    
-    <PackageReference Include="MediatR" Version="12.0.1" />    
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />    
+    <PackageReference Include="MediatR" Version="10.0.1" />    
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />    
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
