Cruds for UserForms and UserFormValues tables

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <Folder Include="Services\Form\Responses\" />
+	  <Folder Include="Services\UserFormValue\Queries\" />
+	  <Folder Include="Services\UserForm\Queries\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\Form\Responses\" />
