User login and user create entities are added

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Services\ApplicationUsers\Responses\" />
+    <Folder Include="Services\ApplicationUsers\Queries\" />
     <Folder Include="Services\Form\Responses\" />
 	  <Folder Include="Services\UserFormValue\Queries\" />
 	  <Folder Include="Services\UserForm\Queries\" />	  
